# RaV-IDP

./: .dockerignore  .env.example  .gitignore  CITATION.cff  DOCKER.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  sanity_check_gpt41.py  test_table_fixes.py
comparative_analysis/: common.py  compare_results.py  run_docling.py  run_gpt4_vision.py  run_llamaparse.py  run_marker.py  run_unstructured.py
docs/: design.md  fix_3a.md
rav_idp/: cli.py  config.py  io.py  models.py  pipeline.py  utils.py
rav_idp/components/: fallback_extractor.py  layout_detector.py
rav_idp/components/comparators/: table.py
rav_idp/components/extractors/: image.py
rav_idp/data/: registry.py
rav_idp/evaluation/: stage3a_tables.py  stage3b_images.py  stage3c_native_pdf.py  stage3c_text.py  stage4_fidelity.py  stage5_reextraction.py  stage6_endtoend.py
tests/integration/: test_pipeline_end_to_end.py
tests/unit/: test_comparators.py  test_data_registry.py  test_extractors_table.py  test_fallback_extractor.py  test_quality_classifier.py  test_reconstructors.py  test_stage2_layout.py  test_stage3a_tables.py  test_stage3c_text.py  test_table_comparator.py
